Update SQLite compile definitions

--- a/sqlite3/CMakeLists.txt
+++ b/sqlite3/CMakeLists.txt
@@ -3,6 +3,7 @@ add_definitions(
   -DSQLITE_ENABLE_API_ARMOR
   -DSQLITE_ENABLE_JSON1
   -DSQLITE_ENABLE_API_ARMOR
+  -DSQLITE_ENABLE_MEMORY_MANAGEMENT
   # Functionality disables
   -DSQLITE_DISABLE_LFS
   -DSQLITE_DISABLE_DIRSYNC
@@ -12,6 +13,8 @@ add_definitions(
   -DSQLITE_OMIT_DEPRECATED
   -DSQLITE_OMIT_SHARED_CACHE
   -DSQLITE_OMIT_WAL
+  -DSQLITE_OMIT_LOOKASIDE
+  -DSQLITE_ENABLE_DBSTAT_VTAB
 )
 
 add_library(osquery_sqlite OBJECT sqlite3.c)
