Remove OMIT_WAL for file-database reads

--- a/sqlite3/CMakeLists.txt
+++ b/sqlite3/CMakeLists.txt
@@ -2,7 +2,6 @@ add_definitions(
   -DSQLITE_ENABLE_COLUMN_METADATA
   -DSQLITE_ENABLE_API_ARMOR
   -DSQLITE_ENABLE_JSON1
-  -DSQLITE_ENABLE_API_ARMOR
   -DSQLITE_ENABLE_MEMORY_MANAGEMENT
   # Functionality disables
   -DSQLITE_DISABLE_LFS
@@ -12,7 +11,8 @@ add_definitions(
   -DSQLITE_OMIT_AUTHORIZATION
   -DSQLITE_OMIT_DEPRECATED
   -DSQLITE_OMIT_SHARED_CACHE
-  -DSQLITE_OMIT_WAL
+  # Omitting the WAL will prevent database file access.
+  #-DSQLITE_OMIT_WAL
   -DSQLITE_OMIT_LOOKASIDE
   -DSQLITE_ENABLE_DBSTAT_VTAB
 )
